# OpenGL-for-Beginners

./: .gitignore
dependencies/lib/: libglfw.so.3  libglfw.so.3.5
models/: girl.mtl
week 01 hello window/finished/: Makefile
week 05 transformations/3 rotations/: CMakeLists.txt
week 06 design patterns/2 object oriented/: CMakeLists.txt
week 06 design patterns/3 model view controller/: CMakeLists.txt
week 1 hello window/: CMakeLists.txt
week 1 hello window/dependencies/glad/: glad.h
week 1 hello window/macos_linux/start/: CMakeLists.txt
week 1 hello window/macos_linux/start/src/: config.h  main.cpp
week 1 hello window/src/: config.h  glad.c  main.cpp
week 1 hello window/windows/finished/: Hello Window.sln
week 1 hello window/windows/finished/src/: main.cpp
week 1 hello window/windows/start/: Hello Window.vcxproj.filters
week 1 hello window/windows/start/src/: main.cpp
week 11 debugging/2 finished/: CMakeLists.txt
week 12 post processing/2 finished/: CMakeLists.txt
week 13 compute shaders/3 one sphere/: CMakeLists.txt
week 15 bindless textures/src/: config.h
week 16 view culling/src/: config.h
week 17 instanced rendering/src/: config.h
week 18 buffer lumping/: readme.md
week 18 buffer lumping/src/: config.h
week 19 indirect drawing/: readme.md
week 2 what are shaders/macos_linux/start/: CMakeLists.txt
week 2 what are shaders/macos_linux/start/src/: main.cpp
week 20 GPU driven rendering/compute-with-bvh/: Project.vcxproj  (+1 more)
week 21 Vertex Compression/: readme.md
week 7 loading models/2 string splitting/: CMakeLists.txt
(+322 files in other folders)
